update js detail page

--- a/src/_templates/_layout/_header.pug
+++ b/src/_templates/_layout/_header.pug
@@ -9,25 +9,25 @@ header
 					.swiper-wrapper
 						.swiper-slide
 							.item.active
-								a(href="#" data-scroll-to="1") giới thiệu
+								a(href="index.html" data-scroll-to="1") giới thiệu
 						.swiper-slide
 							.item
-								a(href="#" data-scroll-to="2") vị trí và tiện ích
+								a(href="index.html" data-scroll-to="2") vị trí và tiện ích
 						.swiper-slide
 							.item
-								a(href="#" data-scroll-to="3") mặt bằng
+								a(href="index.html" data-scroll-to="3") mặt bằng
 						.swiper-slide
 							.item
-								a(href="#" data-scroll-to="4") chương trình bán hàng
+								a(href="index.html" data-scroll-to="4") chương trình bán hàng
 						.swiper-slide
 							.item
-								a(href="#" data-scroll-to="5") hỗ trợ tài chính
+								a(href="index.html" data-scroll-to="5") hỗ trợ tài chính
 						.swiper-slide
 							.item
-								a(href="#" data-scroll-to="6") tiến độ
+								a(href="index.html" data-scroll-to="6") tiến độ
 						.swiper-slide
 							.item
-								a(href="#" data-scroll-to="7") thư viện
+								a(href="index.html" data-scroll-to="7") thư viện
 			.language
 				ul
 					li.item.active(data-language="vn")
