--- a/src/_templates/_layout/_fixed-menu.pug
+++ b/src/_templates/_layout/_fixed-menu.pug
@@ -7,7 +7,7 @@
 				h5 VIEW 360
 					sup o
 	.block-item(type="text")
-		.item
+		.item(data-scroll-to="8")
 			.text NHẬN BÁO GIÁ
 			.icon
 				img.svg(data-src="./assets/icons/quotation.svg", alt="PHONE")
