--- a/src/scss/pages/index/i-4.scss
+++ b/src/scss/pages/index/i-4.scss
@@ -1,6 +1,12 @@
 .index-4 {
 	position: relative;
 
+	@media (min-width: 1439.98px) {
+		height: 85vh;
+		width: 100%;
+		overflow: hidden;
+	}
+
 	.container {
 		@media (min-width: 1025px) {
 			position: absolute;
