--- a/src/scss/pages/index/i-8.scss
+++ b/src/scss/pages/index/i-8.scss
@@ -144,14 +144,16 @@
 			}
 
 			.icon {
-				img {
-					display: block;
-					margin: 0 auto;
-				}
+				position: relative;
+				display: block;
+				margin: 0 auto;
+				z-index: 10;
 			}
 
 			.text {
+				position: relative;
 				margin-top: 15px;
+				z-index: 10;
 
 				p {
 					color: #ffffff;
