--- a/src/scss/pages/index/i-11.scss
+++ b/src/scss/pages/index/i-11.scss
@@ -23,14 +23,20 @@
 
 	.list-info {
 		.item {
+			display: flex;
 			color: #ffffff;
 
 			img {
 				margin-bottom: 10px;
 			}
+
+			>a {
+				color: #ffffff;
+				padding-left: 5px;
+			}
 		}
 
-		.item + .item {
+		.item+.item {
 			margin-top: 5px;
 		}
 	}
@@ -40,12 +46,12 @@
 	}
 
 	.text-info {
-		height: 220px;
+		height: 264px;
 		margin-bottom: 50px;
 	}
 
 	.text-form {
-		height: 220px;
+		height: 264px;
 		margin-bottom: 50px;
 		display: flex;
 		flex-direction: column;
@@ -79,6 +85,7 @@
 					color: map-get($mau, main);
 				}
 			}
+
 			.field-validate-error {
 				color: red;
 				font-size: 14px;
@@ -106,7 +113,7 @@
 			}
 		}
 
-		.input-group + .input-group {
+		.input-group+.input-group {
 			margin-top: 56px;
 		}
 	}
@@ -145,7 +152,7 @@
 				}
 			}
 
-			.input-group + .input-group {
+			.input-group+.input-group {
 				margin-top: 25px;
 			}
 		}
@@ -208,7 +215,7 @@
 				}
 			}
 
-			.input-group + .input-group {
+			.input-group+.input-group {
 				margin-top: 15px;
 			}
 		}
