--- a/src/_templates/index/i-11.pug
+++ b/src/_templates/index/i-11.pug
@@ -10,6 +10,9 @@ section.index-11(data-scroll-id="8")
 						.item Add: Tỉnh lộ 822, Ấp Chánh, xã Tân Mỹ, huyện Đức Hòa, tỉnh Long An.
 						.item Phone: 0938 188 329
 						.item Email: contact.trananhgroup@gmail.com
+						.item Facebook:
+							|
+							a.lcl.lcl-1(target="_blank" href="https://www.facebook.com/trananhgroupwestlakesgolfvillas") https://www.facebook.com/trananhgroupwestlakesgolfvillas
 				.block-map
 					iframe(src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d411.75855927568773!2d106.35068872305106!3d10.938450967800689!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x310b27eba76a670f%3A0xe9e36a4b05719603!2zxJBUODIyLCBWaWV0bmFt!5e0!3m2!1sen!2s!4v1591717575453!5m2!1sen!2s" width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0")
 			.col-md-6
