--- a/src/_templates/_layout/_fixed-menu.pug
+++ b/src/_templates/_layout/_fixed-menu.pug
@@ -13,13 +13,15 @@
 				img.svg(data-src="./assets/icons/quotation.svg", alt="PHONE")
 	.block-item
 		.item.css-selector
-			.icon
-				img.svg(data-src="./assets/icons/phone.svg", alt="PHONE")
-			.text-hover
-				h5 0938 188 329
+			a(href="tel:0938188329")
+				.icon
+					img.svg(data-src="./assets/icons/phone.svg", alt="PHONE")
+				.text-hover
+					h5 0938 188 329
 	.block-item
 		.item.css-selector
-			.icon
-				img.svg(data-src="./assets/icons/download.svg", alt="PHONE")
-			.text-hover
-				h5 tải chính sách thanh toán
+			a(href="./assets/images/index-4/1.jpg" download)
+				.icon
+					img.svg(data-src="./assets/icons/download.svg", alt="PHONE")
+				.text-hover
+					h5 tải chính sách thanh toán
