--- a/src/_templates/_layout/_fixed-menu.pug
+++ b/src/_templates/_layout/_fixed-menu.pug
@@ -1,11 +1,12 @@
 .fixed-menu
 	.block-item
-		.item.css-selector
-			.icon
-				img.svg(data-src="./assets/icons/view-360.svg", alt="VIEW-360")
-			.text-hover
-				h5 VIEW 360
-					sup o
+		a(href="https://demo.egal.vn/demo/westlakes/" target="_blank")
+			.item.css-selector
+				.icon
+					img.svg(data-src="./assets/icons/view-360.svg", alt="VIEW-360")
+				.text-hover
+					h5 VIEW 360
+						sup o
 	.block-item(type="text")
 		.item(data-scroll-to="8")
 			.text NHẬN BÁO GIÁ
