--- a/src/scss/pages/index/i-5.scss
+++ b/src/scss/pages/index/i-5.scss
@@ -67,23 +67,29 @@
 					}
 
 					&:hover {
-						background: rgba(map-get($mau, main), 0.3);
+						background: map-get($mau, main);
 
 						h5 {
 							color: white;
 						}
 					}
 
+					&:after {
+						content: '';
+						position: absolute;
+						width: 100%;
+						height: 100%;
+						top: 0;
+						left: 0;
+						animation: chophopmau 2s ease-in-out infinite;
+					}
+
 					&:before {
 						content: '';
 						display: block;
-						// position: absolute;
-						// top: 0;
-						// left: 0;
 						width: 40px;
 						height: 25px;
 						background: map-get($mau, main);
-						animation: chophopmau 1s linear infinite;
 					}
 
 					&[data-bg-item='yellow'] {
