--- a/src/_templates/_layout/_header.pug
+++ b/src/_templates/_layout/_header.pug
@@ -30,7 +30,7 @@ header
 								a(href="index.html" data-scroll-to="7") thư viện
 			.language
 				ul
-					li.item.active(data-language="vn")
+					li.item.active(data-language="vn" disabled-click)
 						a en
 					li.item(data-language="en")
 						a vn
