--- a/src/scss/_globals/atomic.scss
+++ b/src/scss/_globals/atomic.scss
@@ -4,6 +4,11 @@
 	display: none !important;
 }
 
+[disabled-click] {
+	pointer-events: none !important;
+	cursor: not-allowed !important;
+}
+
 .dekstop {
 	@media (max-width: 1024px) {
 		display: none !important;
