--- a/Views/Home/Article.cshtml
+++ b/Views/Home/Article.cshtml
@@ -31,7 +31,7 @@
             </div>
         </div>
     </section>
-    <section class="index-11 section-in-news-detail" data-bg="/Content/resources/assets/images/background/last-index.png">
+    <section class="index-11 section-in-news-detail" data-bg="/Content/resources/assets/images/background/last-index.jpg">
         @Html.Action("Index", "Contact")
     </section>
     <div class="detail-page" id="js-page-verify" hidden></div>
