--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -21,16 +21,16 @@
             </div>
         </div>
     </section>
-    <section class="index-3" data-scroll-id="2" data-bg="/Content/resources/assets/images/background/index-3.png">
+    <section class="index-3" data-scroll-id="2" data-bg="/Content/resources/assets/images/background/index-3.jpg">
         @Html.Raw(Model.Section2.Content)
     </section>
     <section class="index-4">
         @Html.Raw(Model.Section3.Content)
     </section>
-    <section class="index-5" data-scroll-id="3" data-bg="/Content/resources/assets/images/background/index-5.png">
+    <section class="index-5" data-scroll-id="3" data-bg="/Content/resources/assets/images/background/index-5.jpg">
         @Html.Raw(Model.Section4.Content)
     </section>
-    <section class="index-6" data-scroll-id="4" data-bg="/Content/resources/assets/images/background/index-6.png">
+    <section class="index-6" data-scroll-id="4" data-bg="/Content/resources/assets/images/background/index-6.jpg">
         <div class="block-1">
             <div class="container">
                 <div class="block-content ta-c mx-at" max-width="60%">
@@ -52,14 +52,14 @@
             </div>
         </div>
     </section>
-    <section class="index-8" data-scroll-id="5" data-bg="/Content/resources/assets/images/background/index-8.png">
+    <section class="index-8" data-scroll-id="5" data-bg="/Content/resources/assets/images/background/index-8.jpg">
         <div class="container" max-width="1360px">
             <div class="block-content mx-at">
                 @Html.Raw(Model.Section7.Content)
             </div>
         </div>
     </section>
-    <section class="last-index" data-bg="/Content/resources/assets/images/background/last-index.png">
+    <section class="last-index" data-bg="/Content/resources/assets/images/background/last-index.jpg">
         <section class="index-9" data-scroll-id="6">
             <div class="container">
                 <div class="block-content mx-at" max-width="50%">
@@ -205,7 +205,7 @@
     <div class="block-item">
 	
         <div class="item css-selector">
-		<a href="./assets/download/chinh-sach-thanh-toan.pdf" download>
+		<a href="/Content/resources/assets/download/chinh-sach-thanh-toan.pdf" download>
             <div class="icon"><img class="svg" data-src="/Content/resources/assets/icons/download.svg" alt="DOWNLOAD"></div>
             <div class="text-hover">
                 <h5>@Html.GetResource(ResourceKeyCollection.Download_Policy)</h5>
