--- a/src/scss/pages/index/i-5.scss
+++ b/src/scss/pages/index/i-5.scss
@@ -52,19 +52,19 @@
 
 					&:nth-child(1) {
 						&:after {
-							animation-delay: .1s;
+							animation-delay: 0.1s;
 						}
 					}
 
 					&:nth-child(2) {
 						&:after {
-							animation-delay: .5s;
+							animation-delay: 0.5s;
 						}
 					}
 
 					&:nth-child(3) {
 						&:after {
-							animation-delay: .9s;
+							animation-delay: 0.9s;
 						}
 					}
 
@@ -233,7 +233,7 @@
 					}
 				}
 
-				li+li {
+				li + li {
 					margin-top: 0;
 				}
 			}
@@ -323,7 +323,8 @@
 }
 
 .index-5-aside {
-	@media (min-width: 1025px) {}
+	@media (min-width: 1025px) {
+	}
 
 	.matbang-slide-controls {
 		position: absolute;
@@ -480,5 +481,13 @@
 	.swiper-container {
 		height: 100%;
 		background-color: white;
+
+		.swiper-slide {
+			img {
+				width: 100%;
+				height: 100%;
+				object-fit: cover;
+			}
+		}
 	}
 }
