--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -44,7 +44,7 @@
         </div>
         @Html.Raw(Model.Section5.Content)
     </section>
-    <section class="index-7" data-bg="/Content/resources/assets/images/background/index-7.png">
+    <section class="index-7" data-bg="/files/images/backgrounds/index-7.jpg">
         <div class="container" max-width="1360px">
             <div class="block-content mx-at">
                 <h2>@Model.Section6.Title</h2>
@@ -205,12 +205,12 @@
     <div class="block-item">
 	
         <div class="item css-selector">
-		<a href="/Content/resources/assets/download/chinh-sach-thanh-toan.pdf" download>
-            <div class="icon"><img class="svg" data-src="/Content/resources/assets/icons/download.svg" alt="DOWNLOAD"></div>
-            <div class="text-hover">
-                <h5>@Html.GetResource(ResourceKeyCollection.Download_Policy)</h5>
-            </div>
-			<a>
+			<a href="/Content/resources/assets/download/chinh-sach-thanh-toan.pdf" download>
+				<div class="icon"><img class="svg" data-src="/Content/resources/assets/icons/download.svg" alt="DOWNLOAD"></div>
+				<div class="text-hover">
+					<h5>@Html.GetResource(ResourceKeyCollection.Download_Policy)</h5>
+				</div>
+			</a>
         </div>
     </div>
 </div>
