--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
     <meta property="og:image" content="@Html.Raw(ViewBag.MetaImage)">
 
     <!-- Put css tags here! -->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&amp;display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/Content/resources/css/core.min.css">
     <link rel="stylesheet" href="/Content/resources/css/main.min.css">
     @RenderSection("styles", required: false)
