--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -179,7 +179,7 @@
     <div class="block-item">
         <div class="item css-selector">
 		<a href="https://demo.egal.vn/demo/westlakes/" target="_blank">
-            <div class="icon"><img class="svg" data-src="/Content/resources/assets/icons/view-360.svg" alt="VIEW-360"></div>
+            <div class="icon"><img class="blur-up lazyload" src="/Content/resources/assets/icons/view-360.svg" alt="VIEW-360"></div>
             <div class="text-hover">
                 <h5>VIEW 360<sup>o</sup></h5>
 				</a>
@@ -189,13 +189,13 @@
     <div class="block-item" type="text">
         <div class="item" data-scroll-to="8">
             <div class="text">@Html.GetResource(ResourceKeyCollection.Menu_Contact)</div>
-            <div class="icon"><img class="svg" data-src="/Content/resources/assets/icons/quotation.svg" alt="PHONE"></div>
+            <div class="icon"><img class="blur-up lazyload" src="/Content/resources/assets/icons/quotation.svg" alt="PHONE"></div>
         </div>
     </div>
     <div class="block-item">
         <div class="item css-selector">
 			<a href="tel:0938188329">
-            <div class="icon"><img class="svg" data-src="/Content/resources/assets/icons/phone.svg" alt="PHONE"></div>
+            <div class="icon"><img class="blur-up lazyload" src="/Content/resources/assets/icons/phone.svg" alt="PHONE"></div>
             <div class="text-hover">
                 <h5>@Html.GetResource(ResourceKeyCollection.Hotline)</h5>
             </div>
@@ -206,7 +206,7 @@
 	
         <div class="item css-selector">
 			<a href="/Content/resources/assets/download/chinh-sach-thanh-toan.pdf" download>
-				<div class="icon"><img class="svg" data-src="/Content/resources/assets/icons/download.svg" alt="DOWNLOAD"></div>
+				<div class="icon"><img class="blur-up lazyload" src="/Content/resources/assets/icons/download.svg" alt="DOWNLOAD"></div>
 				<div class="text-hover">
 					<h5>@Html.GetResource(ResourceKeyCollection.Download_Policy)</h5>
 				</div>
