--- a/src/_templates/_layout/_fixed-menu.pug
+++ b/src/_templates/_layout/_fixed-menu.pug
@@ -3,7 +3,7 @@
 		a(href="https://demo.egal.vn/demo/westlakes/" target="_blank")
 			.item.css-selector
 				.icon
-					img.svg(data-src="./assets/icons/view-360.svg", alt="VIEW-360")
+					img(src="./assets/icons/view-360.svg", alt="VIEW-360")
 				.text-hover
 					h5 VIEW 360
 						sup o
@@ -11,18 +11,18 @@
 		.item(data-scroll-to="8")
 			.text NHẬN BÁO GIÁ
 			.icon
-				img.svg(data-src="./assets/icons/quotation.svg", alt="PHONE")
+				img(src="./assets/icons/quotation.svg", alt="PHONE")
 	.block-item
 		.item.css-selector
 			a(href="tel:0938188329")
 				.icon
-					img.svg(data-src="./assets/icons/phone.svg", alt="PHONE")
+					img(src="./assets/icons/phone.svg", alt="PHONE")
 				.text-hover
 					h5 0938 188 329
 	.block-item
 		.item.css-selector
 			a(href="./assets/images/index-4/1.jpg" download)
 				.icon
-					img.svg(data-src="./assets/icons/download.svg", alt="PHONE")
+					img(src="./assets/icons/download.svg", alt="PHONE")
 				.text-hover
 					h5 tải chính sách thanh toán
