--- a/Views/Contact/Index.cshtml
+++ b/Views/Contact/Index.cshtml
@@ -25,7 +25,7 @@
                     <div class="title">@Html.GetResource(ResourceKeyCollection.Contact_Form_Title)</div>
                     <div class="desc">@Html.GetResource(ResourceKeyCollection.Contact_Form_Description)</div>
                 </div>
-                <div class="block-form">
+                <div class="block-form" data-scroll-id="8">
                     @Html.Partial("_Form", new MainProject.Bussiness.Models.ContactManageModel())
                 </div>
             </div>
