--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -169,7 +169,7 @@
                 </div>
             </div>
         </section>
-        <section class="index-11" data-scroll-id="8">
+        <section class="index-11">
             @Html.Action("Index", "Contact")
         </section>
     </section>
