--- a/src/_templates/index/i-11.pug
+++ b/src/_templates/index/i-11.pug
@@ -1,4 +1,4 @@
-section.index-11(data-scroll-id="8")
+section.index-11
 	.container(max-width="1360px")
 		.block-title.mx-at.ta-c(max-width='75%' no-after)
 		.row
@@ -19,7 +19,7 @@ section.index-11(data-scroll-id="8")
 				.text-form
 					.title ĐĂNG KÝ NHẬN TIN
 					.desc Vui lòng điền vào form dưới đây để nhận toàn bộ thông tin, các chính sách, tài liệu dự án hoặc để chúng tôi tư vấn cho bạn.
-				.block-form
+				.block-form(data-scroll-id="8")
 					form(action="#")
 						.input-group
 							input.form-control(type="text" placeholder="Name" name="Name")
