--- a/src/_templates/index/i-4.pug
+++ b/src/_templates/index/i-4.pug
@@ -18,6 +18,10 @@ section.index-4
 							img(src="./assets/images/background/index-4-1.jpg", alt="")
 						.swiper-slide
 							img(src="./assets/images/background/index-4-1.jpg", alt="")
+					.map-index-4-slider-prev-mobile
+						<svg xmlns="http://www.w3.org/2000/svg" width="8.578" height="17.364" viewBox="0 0 8.578 17.364"><path d="M7.2,0,0,7.975l7.371,7.975" transform="translate(0.5 0.706)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/></svg>
+					.map-index-4-slider-next-mobile
+						<svg xmlns="http://www.w3.org/2000/svg" width="8.578" height="17.363" viewBox="0 0 8.578 17.363"><path d="M.171,0l7.2,7.975L0,15.951" transform="translate(0.707 0.706)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/></svg>
 			.map-index-4-slider-2.map-index-4-slider#map-index-4-slider-2
 				.content
 					.number 02
@@ -35,6 +39,10 @@ section.index-4
 							img(src="./assets/images/index-4/1.jpg", alt="")
 						.swiper-slide
 							img(src="./assets/images/index-4/1.jpg", alt="")
+					.map-index-4-slider-prev-mobile
+						<svg xmlns="http://www.w3.org/2000/svg" width="8.578" height="17.364" viewBox="0 0 8.578 17.364"><path d="M7.2,0,0,7.975l7.371,7.975" transform="translate(0.5 0.706)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/></svg>
+					.map-index-4-slider-next-mobile
+						<svg xmlns="http://www.w3.org/2000/svg" width="8.578" height="17.363" viewBox="0 0 8.578 17.363"><path d="M.171,0l7.2,7.975L0,15.951" transform="translate(0.707 0.706)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/></svg>
 			.map-index-4-slider-3.map-index-4-slider#map-index-4-slider-3
 				.content
 					.number 03
@@ -52,6 +60,10 @@ section.index-4
 							img(src="./assets/images/index-4/2.jpg", alt="")
 						.swiper-slide
 							img(src="./assets/images/index-4/2.jpg", alt="")
+					.map-index-4-slider-prev-mobile
+						<svg xmlns="http://www.w3.org/2000/svg" width="8.578" height="17.364" viewBox="0 0 8.578 17.364"><path d="M7.2,0,0,7.975l7.371,7.975" transform="translate(0.5 0.706)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/></svg>
+					.map-index-4-slider-next-mobile
+						<svg xmlns="http://www.w3.org/2000/svg" width="8.578" height="17.363" viewBox="0 0 8.578 17.363"><path d="M.171,0l7.2,7.975L0,15.951" transform="translate(0.707 0.706)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/></svg>
 			.map-index-4-slider-4.map-index-4-slider#map-index-4-slider-4
 				.content
 					.number 04
@@ -69,6 +81,10 @@ section.index-4
 							img(src="./assets/images/index-4/3.jpg", alt="")
 						.swiper-slide
 							img(src="./assets/images/index-4/3.jpg", alt="")
+					.map-index-4-slider-prev-mobile
+						<svg xmlns="http://www.w3.org/2000/svg" width="8.578" height="17.364" viewBox="0 0 8.578 17.364"><path d="M7.2,0,0,7.975l7.371,7.975" transform="translate(0.5 0.706)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/></svg>
+					.map-index-4-slider-next-mobile
+						<svg xmlns="http://www.w3.org/2000/svg" width="8.578" height="17.363" viewBox="0 0 8.578 17.363"><path d="M.171,0l7.2,7.975L0,15.951" transform="translate(0.707 0.706)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/></svg>
 			.map-index-4-slider-5.map-index-4-slider#map-index-4-slider-5
 				.content
 					.number 05
@@ -86,6 +102,10 @@ section.index-4
 							img(src="./assets/images/index-4/1.jpg", alt="")
 						.swiper-slide
 							img(src="./assets/images/index-4/1.jpg", alt="")
+					.map-index-4-slider-prev-mobile
+						<svg xmlns="http://www.w3.org/2000/svg" width="8.578" height="17.364" viewBox="0 0 8.578 17.364"><path d="M7.2,0,0,7.975l7.371,7.975" transform="translate(0.5 0.706)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/></svg>
+					.map-index-4-slider-next-mobile
+						<svg xmlns="http://www.w3.org/2000/svg" width="8.578" height="17.363" viewBox="0 0 8.578 17.363"><path d="M.171,0l7.2,7.975L0,15.951" transform="translate(0.707 0.706)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/></svg>
 			.map-index-4-slider-6.map-index-4-slider#map-index-4-slider-6
 				.content
 					.number 06
@@ -103,6 +123,10 @@ section.index-4
 							img(src="./assets/images/index-4/1.jpg", alt="")
 						.swiper-slide
 							img(src="./assets/images/index-4/1.jpg", alt="")
+					.map-index-4-slider-prev-mobile
+						<svg xmlns="http://www.w3.org/2000/svg" width="8.578" height="17.364" viewBox="0 0 8.578 17.364"><path d="M7.2,0,0,7.975l7.371,7.975" transform="translate(0.5 0.706)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/></svg>
+					.map-index-4-slider-next-mobile
+						<svg xmlns="http://www.w3.org/2000/svg" width="8.578" height="17.363" viewBox="0 0 8.578 17.363"><path d="M.171,0l7.2,7.975L0,15.951" transform="translate(0.707 0.706)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/></svg>
 			.map-index-4-slider-7.map-index-4-slider#map-index-4-slider-7
 				.content
 					.number 07
@@ -120,6 +144,10 @@ section.index-4
 							img(src="./assets/images/index-4/4.jpg", alt="")
 						.swiper-slide
 							img(src="./assets/images/index-4/4.jpg", alt="")
+					.map-index-4-slider-prev-mobile
+						<svg xmlns="http://www.w3.org/2000/svg" width="8.578" height="17.364" viewBox="0 0 8.578 17.364"><path d="M7.2,0,0,7.975l7.371,7.975" transform="translate(0.5 0.706)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/></svg>
+					.map-index-4-slider-next-mobile
+						<svg xmlns="http://www.w3.org/2000/svg" width="8.578" height="17.363" viewBox="0 0 8.578 17.363"><path d="M.171,0l7.2,7.975L0,15.951" transform="translate(0.707 0.706)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/></svg>
 		.map-index-4-slider-controls
 			.map-index-4-slider-close
 				<svg xmlns="http://www.w3.org/2000/svg" width="10" height="21" viewBox="0 0 10 21"><text transform="translate(0 17)" fill="#fff" font-size="16" font-family="Roboto-Light, Roboto" font-weight="300"><tspan x="0" y="0">X</tspan></text></svg>
