--- a/src/_templates/index/i-5.pug
+++ b/src/_templates/index/i-5.pug
@@ -38,6 +38,10 @@ section.index-5(data-scroll-id="3" data-bg="./assets/images/background/index-5.j
 							img(src="./assets/matbang/1.png", alt="")
 						.swiper-slide
 							img(src="./assets/matbang/1.png", alt="")
+					.map-index-4-slider-prev-mobile
+						<svg xmlns="http://www.w3.org/2000/svg" width="8.578" height="17.364" viewBox="0 0 8.578 17.364"><path d="M7.2,0,0,7.975l7.371,7.975" transform="translate(0.5 0.706)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/></svg>
+					.map-index-4-slider-next-mobile
+						<svg xmlns="http://www.w3.org/2000/svg" width="8.578" height="17.363" viewBox="0 0 8.578 17.363"><path d="M.171,0l7.2,7.975L0,15.951" transform="translate(0.707 0.706)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/></svg>
 			.matbang-slider#matbang-2
 				.swiper-container
 					.swiper-wrapper
@@ -51,6 +55,10 @@ section.index-5(data-scroll-id="3" data-bg="./assets/images/background/index-5.j
 							img(src="./assets/matbang/1.png", alt="")
 						.swiper-slide
 							img(src="./assets/matbang/1.png", alt="")
+					.map-index-4-slider-prev-mobile
+						<svg xmlns="http://www.w3.org/2000/svg" width="8.578" height="17.364" viewBox="0 0 8.578 17.364"><path d="M7.2,0,0,7.975l7.371,7.975" transform="translate(0.5 0.706)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/></svg>
+					.map-index-4-slider-next-mobile
+						<svg xmlns="http://www.w3.org/2000/svg" width="8.578" height="17.363" viewBox="0 0 8.578 17.363"><path d="M.171,0l7.2,7.975L0,15.951" transform="translate(0.707 0.706)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/></svg>
 			.matbang-slider#matbang-3
 				.swiper-container
 					.swiper-wrapper
@@ -64,3 +72,7 @@ section.index-5(data-scroll-id="3" data-bg="./assets/images/background/index-5.j
 							img(src="./assets/matbang/1.png", alt="")
 						.swiper-slide
 							img(src="./assets/matbang/1.png", alt="")
+					.map-index-4-slider-prev-mobile
+						<svg xmlns="http://www.w3.org/2000/svg" width="8.578" height="17.364" viewBox="0 0 8.578 17.364"><path d="M7.2,0,0,7.975l7.371,7.975" transform="translate(0.5 0.706)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/></svg>
+					.map-index-4-slider-next-mobile
+						<svg xmlns="http://www.w3.org/2000/svg" width="8.578" height="17.363" viewBox="0 0 8.578 17.363"><path d="M.171,0l7.2,7.975L0,15.951" transform="translate(0.707 0.706)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/></svg>
