--- a/src/scss/pages/index/i-8.scss
+++ b/src/scss/pages/index/i-8.scss
@@ -3,6 +3,12 @@
 	height: 780px;
 	background-size: cover;
 
+	@media (min-width: 1599.98px) {
+		.container {
+			max-width: 1360px;
+		}
+	}
+
 	.block-content {
 		padding: 70px 0;
 	}
