--- a/src/_templates/index/i-8.pug
+++ b/src/_templates/index/i-8.pug
@@ -1,5 +1,5 @@
 section.index-8(data-scroll-id="5" data-bg="./assets/images/background/index-8.jpg")
-	.container(max-width='1360px')
+	.container
 		.block-content.mx-at
 			.content.ta-c
 				.block-title.mx-at(max-width="600px")
