--- a/src/scss/_globals/utilities.scss
+++ b/src/scss/_globals/utilities.scss
@@ -102,9 +102,9 @@ textarea {
 		max-width: 1036px;
 	}
 
-	&[max-width='1360px'] {
-		max-width: 1360px;
-	}
+	// &[max-width='1360px'] {
+	// 	max-width: 1360px;
+	// }
 
 	&[max-width='1088px'] {
 		max-width: 1088px;
@@ -432,4 +432,31 @@ main {
 			}
 		}
 	}
+}
+
+.map-index-4-slider-prev-mobile,
+.map-index-4-slider-next-mobile {
+	display: none;
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+	z-index: 20;
+	width: 30px;
+	height: 30px;
+	background: rgba(map-get($mau, main), $alpha: .8);
+	justify-content: center;
+	align-items: center;
+	border-radius: 5px;
+
+	@media (max-width: 1024.98px) {
+		display: flex;
+	}
+}
+
+.map-index-4-slider-next-mobile {
+	right: 10px
+}
+
+.map-index-4-slider-prev-mobile {
+	left: 10px
 }
