--- a/src/scss/pages/index/i-10.scss
+++ b/src/scss/pages/index/i-10.scss
@@ -1,6 +1,12 @@
 .index-10 {
 	padding-top: 105px;
 
+	@media (min-width: 1599.98px) {
+		.container {
+			max-width: 1360px;
+		}
+	}
+
 	.review-video {
 		.block-video {
 			height: 365px;
@@ -43,7 +49,7 @@
 				text-align: justify;
 			}
 
-			p + p {
+			p+p {
 				margin-top: 15px;
 			}
 		}
@@ -108,6 +114,7 @@
 					height: unset;
 				}
 			}
+
 			&.active {
 				.item {
 					.img {
@@ -226,6 +233,7 @@
 						font-size: 12px;
 					}
 				}
+
 				&.active {
 					.item {
 						.img {
