--- a/src/scss/pages/index/i-5.scss
+++ b/src/scss/pages/index/i-5.scss
@@ -206,6 +206,7 @@
 					}
 
 					h5 {
+						position: relative;
 						width: auto;
 						font-size: 18px;
 						text-align: center;
@@ -217,9 +218,20 @@
 						border-radius: 22px;
 						color: white;
 						padding: 0 10px;
+						overflow: hidden;
 
 						@media (max-width: 575.98px) {
 							font-size: 15px;
+						}
+
+						&:after {
+							content: '';
+							position: absolute;
+							width: 100%;
+							height: 100%;
+							top: 0;
+							left: 0;
+							animation: chophopmau 2s ease-in-out infinite;
 						}
 					}
 
@@ -233,7 +245,7 @@
 					}
 				}
 
-				li + li {
+				li+li {
 					margin-top: 0;
 				}
 			}
@@ -323,8 +335,7 @@
 }
 
 .index-5-aside {
-	@media (min-width: 1025px) {
-	}
+	@media (min-width: 1025px) {}
 
 	.matbang-slide-controls {
 		position: absolute;
