--- a/src/scss/pages/index/i-6.scss
+++ b/src/scss/pages/index/i-6.scss
@@ -14,11 +14,10 @@
 	.block-2 {
 		box-shadow: 0 5px 10px rgba($color: #000000, $alpha: 0.5);
 		background-size: cover;
-		height: 70vh;
-
 
 		.block-content {
 			position: relative;
+			padding: 100px 0;
 
 			.content {
 				position: relative;
@@ -29,27 +28,27 @@
 				background-image: url(../assets/images/background/item-index-6.png);
 			}
 
-			@media (min-width: 1025px) {
-				&:after {
-					content: '';
-					position: absolute;
-					top: 0;
-					left: 0;
-					width: 100%;
-					height: 100%;
-					mix-blend-mode: multiply;
-					background-image: url("../assets/images/background/item-index-6.png");
-				}
+			// @media (min-width: 1025px) {
+			// 	&:after {
+			// 		content: '';
+			// 		position: absolute;
+			// 		top: 0;
+			// 		left: 0;
+			// 		width: 100%;
+			// 		height: 100%;
+			// 		mix-blend-mode: multiply;
+			// 		background-image: url("../assets/images/background/item-index-6.png");
+			// 	}
 
-				.content {
-					position: absolute;
-					top: 50%;
-					left: 50%;
-					transform: translate(-50%, -50%);
-					z-index: 1;
-					width: 90%;
-				}
-			}
+			// 	.content {
+			// 		position: absolute;
+			// 		top: 50%;
+			// 		left: 50%;
+			// 		transform: translate(-50%, -50%);
+			// 		z-index: 1;
+			// 		width: 90%;
+			// 	}
+			// }
 		}
 
 		.price {
@@ -211,7 +210,7 @@
 
 					li {
 						.icon {
-							height: 60px;
+							height: auto;
 							width: 30%;
 							margin: 0 auto 10px;
 						}
