--- a/src/_templates/index/i-6.pug
+++ b/src/_templates/index/i-6.pug
@@ -5,9 +5,9 @@ section.index-6(data-scroll-id="4" data-bg="./assets/images/background/index-6.j
 				.content
 					.block-title.mx-at
 						h2 CHƯƠNG TRÌNH BÁN HÀNG
-	.block-2(data-bg="./assets/images/background/index-6-block-2.jpg")
+	.block-2(data-bg="./assets/images/background/index-6-block-2.jpg" data-bg-multiply)
 		.container.h-100
-			.block-content.h-100.mx-at(max-width='1088px' data-bg-multiply)
+			.block-content.h-100.mx-at(max-width='1088px')
 				.content.ta-c
 					.price
 						h4 giá công khai chỉ từ
