--- a/src/scss/pages/index/i-6.scss
+++ b/src/scss/pages/index/i-6.scss
@@ -12,8 +12,13 @@
 	}
 
 	.block-2 {
+		position: relative;
 		box-shadow: 0 5px 10px rgba($color: #000000, $alpha: 0.5);
 		background-size: cover;
+
+		&:after {
+			background-image: url(../assets/images/background/item-index-6.png);
+		}
 
 		.block-content {
 			position: relative;
@@ -22,10 +27,6 @@
 			.content {
 				position: relative;
 				z-index: 10;
-			}
-
-			&:after {
-				background-image: url(../assets/images/background/item-index-6.png);
 			}
 
 			// @media (min-width: 1025px) {
