--- a/src/_templates/index/i-6.pug
+++ b/src/_templates/index/i-6.pug
@@ -68,4 +68,4 @@ section.index-6(data-scroll-id="4" data-bg="./assets/images/background/index-6.j
 						.text
 							p Tặng ngay 1 cây vàng SJC trị giá lên đến 50TR
 			.button
-				a.btn.btn-close(data-bg="./assets/images/background/btn-submit__2.png") Đăng ký ngay
+				a.btn.btn-close(data-scroll-to="8" data-bg="./assets/images/background/btn-submit__2.png") Đăng ký ngay
