--- a/src/_templates/_layout/_layout.pug
+++ b/src/_templates/_layout/_layout.pug
@@ -24,7 +24,7 @@ html(lang="en")
 		script.
 			// Ngoài ra, hãy dán mã này ngay sau thẻ mở <body>:
 			//- <!-- Google Tag Manager (noscript) -->
-			<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TR6C85F" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+			//- <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TR6C85F" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			//- <!-- End Google Tag Manager (noscript) -->
 		block loading
 		//- main content
