--- a/src/scss/_globals/utilities.scss
+++ b/src/scss/_globals/utilities.scss
@@ -399,6 +399,10 @@ main {
 
 		&.active {
 			opacity: .5;
+
+			&::after {
+				background-image: url(../assets/icons/pause-active.svg);
+			}
 		}
 	}
 
