--- a/src/scss/_globals/grid.scss
+++ b/src/scss/_globals/grid.scss
@@ -21,7 +21,7 @@
 
 @media (min-width: 1440px) {
 	.container {
-		// max-width: 1360px;
+		max-width: 1360px;
 	}
 }
 
@@ -59,8 +59,8 @@
 	margin-left: 0;
 }
 
-.no-gutters > .col,
-.no-gutters > [class*='col-'] {
+.no-gutters>.col,
+.no-gutters>[class*='col-'] {
 	padding-right: 0;
 	padding-left: 0;
 }
