--- a/src/scss/pages/index/i-3.scss
+++ b/src/scss/pages/index/i-3.scss
@@ -86,6 +86,7 @@
 		.block-content {
 			position: relative;
 			z-index: 2;
+			max-width: 80%;
 		}
 
 		h3 {
@@ -237,6 +238,10 @@
 		.block-2 {
 			h3 {
 				font-size: 32px;
+			}
+
+			.block-content {
+				max-width: 100%;
 			}
 
 			.list-content {
