--- a/src/_templates/_layout/_loading.pug
+++ b/src/_templates/_layout/_loading.pug
@@ -1,10 +1,10 @@
 #loading-container
 	.loading-wrapper
-		//- #loading-logo
-		//- 	img(src="./assets/logo.png")
-		//- .progress
-		//- 	#progress-bar
-		//- .progress-status
-		//- 	| Loading: 
-		//- 	span#progress-percentage 0
-		//- 	| %
+		#loading-logo
+			img(src="./assets/logo.png")
+		.progress
+			#progress-bar
+		.progress-status
+			| Loading: 
+			span#progress-percentage 0
+			| %
