--- a/src/index.pug
+++ b/src/index.pug
@@ -5,6 +5,7 @@ block var
 	- let bodyClass = 'index-page';
 
 block loading
+	include _templates/_layout/_loading
 block banner,breadcrumb
 block main
 	include _templates/index/i-1
