--- a/src/scss/_layouts/loading.scss
+++ b/src/scss/_layouts/loading.scss
@@ -42,7 +42,7 @@
 		max-width: 100%;
 		width: 0%;
 		height: 100%;
-		background-color: #FF9E0C;
+		background-color: map-get($mau, main);
 		background-image: linear-gradient(45deg, rgba(255, 255, 255, .3) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .3) 50%, rgba(255, 255, 255, .3) 75%, transparent 75%, transparent);
 		background-size: 1rem 1rem;
 		background-repeat: repeat;
@@ -55,5 +55,6 @@
 		font-size: 16px;
 		letter-spacing: 3px;
 		font-weight: 600;
+		color: #ffffff;
 	}
 }
